--- a/src/components/profileViewer/profile-viewer.css
+++ b/src/components/profileViewer/profile-viewer.css
@@ -7,5 +7,17 @@
 }
 
 .row {
+  width: 100%;
   margin-top: 24px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.row .title {
+  margin-right: 16px;
+}
+
+.row .data {
+  align-self: flex-end;
 }
